--- a/src/main/webapp/resources/css/home.css
+++ b/src/main/webapp/resources/css/home.css
@@ -1,3 +1,9 @@
+.fortune{
+	color:#ff4500;
+	background-color: #fffacd;
+	display: flex;
+}
+
 input {
     outline: 0;
     border: 0;
@@ -285,4 +291,6 @@ hr.border_add {
 .bulk_form .caution p{
 	color:#fa8072;
 }
+
+
 
